[package]
name = "project"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bincode = "1.3"
config = { version = "0.13", features = ["toml"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
data-encoding = "2.3"
directories = "4"
lazy_static = "1.4"
num_cpus = "1.13"
num_enum = "0.5"
#quinn = "0.9"
rand = "0.8"
rayon = "1.5"
regex = "1.5"
#roxy = { git = "https://github.com/aicers/roxy.git", tag = "0.1.0" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
#warp = { version = "0.3", features = ["tls"] }
pdu = "1.4"
#postgres = "0.19"
