[package]
name = "project"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-graphql = { version = "6.0", features = ["chrono", "decimal"] }
async-graphql-warp = "5"
base64 = "0.21"
bb8-postgres = { version = "0.8", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
] }
bcrypt = "0.15"
bincode = "1.3"
config = { version = "0.13", features = ["toml"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.2"
data-encoding = "2.3"
directories = "5"
humantime = "2.1"
humantime-serde = "1"
lazy_static = "1.4"
limits-rs = "0.2"
num_cpus = "1.16"
num_enum = "0.6"
#quinn = "0.9"
rand = "0.8"
rayon = "1.7"
regex = "1.9"
rocksdb = "0.21"
#roxy = { git = "https://github.com/aicers/roxy.git", tag = "0.1.0" }
rustls = "0.21"
rustls-native-certs = "0.6"
rustls-pemfile = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
toml_edit = "0.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres-rustls = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
warp = { version = "0.3", features = ["tls"] }
pdu = "1.4"
#postgres = "0.19"
walkdir = "2"
