[package]
name = "new_cargo_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = "0.4"
env_logger = "0.9"
time = "0.3"
psutil = "3.2"
byte-unit = "4.0"
conv = "0.3"
postgres = "0.19"
